mdapioutput/objects/SSCMap__c.object
<CustomObject>
    <label>SSCMap</label>
    <nameField>
        <label>name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SSCMap</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>SSCMap</relationshipLabel>
        <relationshipName>SSCMapPosition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>